fixed y scroll when height overflow. removed todos

--- a/src/app/photography-page/full-image-viewer/full-image-viewer.component.scss
+++ b/src/app/photography-page/full-image-viewer/full-image-viewer.component.scss
@@ -27,6 +27,7 @@
 	&.zoomedHeightOverflowContainer {
 		overflow-y: scroll;
 		overflow-x: hidden;
+		touch-action: pan-y !important;
 	}
 
 	&.zoomedWidthOverflowContainer {
